// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should have label and linkTo snapshot 1`] = `
.c2 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  color: black;
  font-style: normal;
}

.c1 a:visited,
.c1 a:link {
  color: #5F7A88;
  font-style: normal;
  font-size: 15px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > svg {
  color: #5F7A88;
  margin: 0 3px;
  font-size: 10px;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
}

<div>
  <nav
    aria-label="Breadcrumb"
    class="c0"
  >
    <ul>
      <li
        class="c1"
      >
        <a
          href="www.github.com"
        >
          Link2
        </a>
        <svg
          class="c2"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Should render Breadcrumb snapshot 1`] = `
.c2 {
  font-size: 8px;
  vertical-align: middle;
}

.c1 {
  color: black;
  font-style: normal;
}

.c1 a:visited,
.c1 a:link {
  color: #5F7A88;
  font-style: normal;
  font-size: 15px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > svg {
  color: #5F7A88;
  margin: 0 3px;
  font-size: 10px;
}

.c3 {
  color: black;
  font-style: normal;
}

.c3 a:visited,
.c3 a:link {
  color: #2E3538;
  font-style: normal;
  font-size: 15px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > svg {
  color: #2E3538;
  margin: 0 3px;
  font-size: 10px;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
}

<div>
  <nav
    aria-label="Breadcrumb"
    class="c0"
  >
    <ul>
      <li
        class="c1"
      >
        <a
          href="www.github.com"
        >
          Link2
        </a>
        <svg
          class="c2"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </li>
      <li
        class="c3"
      >
        <a
          aria-current="page"
          href="www.repay.com"
        >
          Link2
        </a>
        <svg
          class="c2"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </li>
    </ul>
  </nav>
</div>
`;
